--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="images/1.png" class="w-fit h-[384px] md:h-full image" alt="" id="image1">
     </div>
     <div class="flex flex-col justify-center items-center relative">
-      <a href="https://c5m12.vercel.app/" target="_blank" class="absolute right-[12%] bottom-4 w-[45px] h-[90px]"></a>
+      <a href="https://chocolate-woad.vercel.app/" target="_blank" class="absolute right-[12%] bottom-4 w-[45px] h-[90px]"></a>
       <img src="images/2.png" class="w-fit h-[384px] md:h-full" alt="" id="image2">
     </div>
     <div class="flex flex-col justify-center items-center relative">
