--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <img src="images/1.png" class="w-fit h-[384px] md:h-full image" alt="" id="image1">
     </div>
     <div class="flex flex-col justify-center items-center relative">
-      <a href="https://chocolate-woad.vercel.app/" target="_blank" class="absolute right-[12%] bottom-4 w-[45px] h-[90px]"></a>
+      <a href="https://chocolate-woad.vercel.app/" target="_blank"
+        class="absolute right-[12%] bottom-4 w-[45px] h-[90px]"></a>
       <img src="images/2.png" class="w-fit h-[384px] md:h-full" alt="" id="image2">
     </div>
     <div class="flex flex-col justify-center items-center relative">
@@ -34,15 +35,13 @@
         class="absolute right-[10%] bottom-[33%] w-[65px] h-[80px]"></a>
       <a href="https://c5m14.vercel.app/" target="_blank"
         class="absolute left-[16%] bottom-[10%] w-[65px] h-[80px]"></a>
-      <a href="https://c5m3.vercel.app/" target="_blank"
-        class="absolute right-[10%] bottom-[10%] w-[65px] h-[80px]"></a>
       <img src="images/3.png" class="w-fit h-[384px] md:h-full" alt="" id="image3">
     </div>
     <div class="flex flex-col justify-center items-center relative">
-      <a href="https://c5m6.vercel.app/" target="_blank" class="absolute left-[9%] top-[10%] w-[135px] h-[135px]"></a>
-      <a href="https://c5m10.vercel.app/" target="_blank" class="absolute left-[9%] bottom-[10%] w-[65px] h-[80px]"></a>
+      <a href="https://c5m6.vercel.app/" target="_blank" class="absolute left-[13%] top-[10%] w-[135px] h-[135px]"></a>
+      <a href="https://c5m10.vercel.app/" target="_blank" class="absolute left-[13%] bottom-[28%] w-[65px] h-[80px]"></a>
       <a href="https://c4m13.vercel.app/" target="_blank"
-        class="absolute right-[18%] bottom-[10%] w-[65px] h-[80px]"></a>
+        class="absolute right-[16%] bottom-[28%] w-[65px] h-[80px]"></a>
       <img src="images/4.png" class="w-fit h-[384px] md:h-full" alt="" id="image4">
     </div>
     <div class="flex flex-col justify-center items-center relative">
@@ -54,8 +53,10 @@
     <div class="flex flex-col justify-center items-center relative">
       <a href="https://c5m1.vercel.app/" target="_blank" class="absolute left-[12%] top-[12%] w-[65px] h-[80px]"></a>
       <a href="https://c5m2.vercel.app/" target="_blank" class="absolute right-[14%] top-[12%] w-[65px] h-[80px]"></a>
-      <a href="https://c5m4.vercel.app/" target="_blank" class="absolute right-[14%] bottom-[32%] w-[150px] h-[80px]"></a>
-      <a href="https://c5m13.vercel.app/" target="_blank" class="absolute right-[14%] bottom-[8%] w-[150px] h-[80px]"></a>
+      <a href="https://c5m4.vercel.app/" target="_blank"
+        class="absolute right-[14%] bottom-[32%] w-[150px] h-[80px]"></a>
+      <a href="https://c5m13.vercel.app/" target="_blank"
+        class="absolute right-[14%] bottom-[8%] w-[150px] h-[80px]"></a>
       <img src="images/6.png" class="w-fit h-[384px] md:h-full" alt="" id="image6">
     </div>
 
