--- a/index.html
+++ b/index.html
@@ -20,46 +20,168 @@
     class="absolute top-[calc(50%-225px)] right-5 w-[32px] md:w-[64px] md:rotate-180 md:top-0 z-50 pointer-events-none invisible"
     alt="arrow" id="arrow">
   <div id="magazine" class="mx-5">
-    <div class="flex flex-col justify-center items-center relative">
-      <img src="images/1.png" class="w-fit h-[384px] md:h-full image" alt="" id="image1">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-    <div class="flex flex-col justify-center items-center relative">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
       <a href="https://chocolate-woad.vercel.app/" target="_blank"
         class="absolute right-[12%] bottom-4 w-[45px] h-[90px]"></a>
-      <img src="images/2.png" class="w-fit h-[384px] md:h-full" alt="" id="image2">
+
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-    <div class="flex flex-col justify-center items-center relative">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
       <a href="https://c5m11.vercel.app/" target="_blank"
         class="absolute left-[16%] bottom-[33%] w-[65px] h-[80px]"></a>
       <a href="https://c5m5.vercel.app/" target="_blank"
         class="absolute right-[10%] bottom-[33%] w-[65px] h-[80px]"></a>
       <a href="https://c5m14.vercel.app/" target="_blank"
         class="absolute left-[16%] bottom-[10%] w-[65px] h-[80px]"></a>
-      <img src="images/3.png" class="w-fit h-[384px] md:h-full" alt="" id="image3">
+
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-    <div class="flex flex-col justify-center items-center relative">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
       <a href="https://c5m6.vercel.app/" target="_blank" class="absolute left-[13%] top-[10%] w-[135px] h-[135px]"></a>
-      <a href="https://c5m10.vercel.app/" target="_blank" class="absolute left-[13%] bottom-[28%] w-[65px] h-[80px]"></a>
+      <a href="https://c5m10.vercel.app/" target="_blank"
+        class="absolute left-[13%] bottom-[28%] w-[65px] h-[80px]"></a>
       <a href="https://c5m13.vercel.app/" target="_blank"
         class="absolute right-[16%] bottom-[28%] w-[65px] h-[80px]"></a>
-      <img src="images/4.png" class="w-fit h-[384px] md:h-full" alt="" id="image4">
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-    <div class="flex flex-col justify-center items-center relative">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
       <a href="https://c5m9.vercel.app/" target="_blank" class="absolute left-[12%] top-[15%] w-[85px] h-[135px]"></a>
       <a href="https://c5m7.vercel.app/" target="_blank"
         class="absolute right-[9%] bottom-[15%] w-[85px] h-[135px]"></a>
-      <img src="images/5.png" class="w-fit h-[384px] md:h-full" alt="" id="image5">
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-    <div class="flex flex-col justify-center items-center relative">
+    <div class="flex flex-col items-center w-full bg-white overflow-hidden">
       <a href="https://c5m1.vercel.app/" target="_blank" class="absolute left-[12%] top-[12%] w-[65px] h-[80px]"></a>
       <a href="https://c5m2.vercel.app/" target="_blank" class="absolute right-[14%] top-[12%] w-[65px] h-[80px]"></a>
       <a href="https://c5m4.vercel.app/" target="_blank"
         class="absolute right-[14%] bottom-[32%] w-[150px] h-[80px]"></a>
       <a href="https://c5m8.vercel.app/" target="_blank"
         class="absolute right-[14%] bottom-[8%] w-[150px] h-[80px]"></a>
-      <img src="images/6.png" class="w-fit h-[384px] md:h-full" alt="" id="image6">
+      <img src="images/spring.png" class="absolute -left-6 z-[5] h-full" alt="">
+      <div class="flex absolute left-[10%] top-[6%]">
+        <img src="images/logo.png" class="w-[12%] h-[12%]" alt="logo">
+        <p class="font-extrabold text-[2.2vw]">Almubdieun<br /><span class="text-yellow-400">tech</span></p>
+      </div>
+      <h2 class="font-bold mt-[30%] mb-6 text-[2.6vw]">3D smart catalog</h2>
+      <p class="text-[1.7vw] mx-[14%]">About Us<br /> Almubdieun Tech Your digital transformation partner. Almubdieun
+        Tech
+        delivers
+        custom software
+        solutions
+        tailored to your business needs.<br />
+        Our expert team ensures technical excellence and aligns with your
+        specific
+        business
+        objectives.</p>
+      <!-- <img src="images/99.png" class="absolute bottom-0 w-fit" alt=""> -->
+      <div class="absolute right-5 bottom-5">
+        <h3 class="text-[2.3vw]">Contact Us</h3>
+        <p class="text-[1.1vw]">info@almubdieuntech.com<br />almubdieuntech.com</p>
+      </div>
     </div>
-
   </div>
   <script type="module" src="./main.js"></script>
 </body>
