--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </div>
     <div class="flex flex-col justify-center items-center relative">
       <a href="https://c5m6.vercel.app/" target="_blank" class="absolute left-[13%] top-[10%] w-[135px] h-[135px]"></a>
-      <a href="https://c5m10.vercel.app/" target="_blank" class="absolute left-[13%] bottom-[28%] w-[65px] h-[80px]"></a>
+      <a href="https://c5m10.vercel.app/" target="_blank"
+        class="absolute left-[13%] bottom-[28%] w-[65px] h-[80px]"></a>
       <a href="https://c5m13.vercel.app/" target="_blank"
         class="absolute right-[16%] bottom-[28%] w-[65px] h-[80px]"></a>
       <img src="images/4.png" class="w-fit h-[384px] md:h-full" alt="" id="image4">
@@ -60,6 +61,10 @@
       <img src="images/6.png" class="w-fit h-[384px] md:h-full" alt="" id="image6">
     </div>
 
+  </div>
+  <div class="flex flex-col justify-center items-center absolute inset-0 z-[50] bg-white" id="loading-screen">
+    <p id="loading-text">0%</p>
+    <progress id="loading-progress" value="0" max="100" class="h-2 w-4/5"></progress>
   </div>
   <script type="module" src="./main.js"></script>
 </body>
